2003-09-01 v0.24.1:
  * Fix compile with gcc-3.3.
  * Fix a few testcases leaving tempfiles behind.

2003-08-31 v0.24:
  * Add automatic handling of parfiles.  nget will automatically download only as many .Pxx or .volX+X.par2 files as needed. (You still need an external program such as parchive or par2cmdline to restore them)
  * Add autopar exitstatus, changed path error code to be 4. (Same as user error code, since its basically a user error and there weren't any free bits.)
  * Change 0-file handling to show the 0 part as a seperate post than the binary it was posted with. (Avoids missing 0-files when they are posted with a binary that gets dropped due to dupefile checking or autopar handling)
  * Patched uulib (in nget+uulib) to avoid detecting some text posts as UUdata. (patch also available at http://nget.sf.net/patches/uulib-0.5.18-detect_text_as_uudata_fix.patch-v2)
  * Switch to using "GROUP g\nARTICLE n" in multi-group mode, rather than using ARTICLE <message-id>, since that is extremely slow on some news servers.
  * Fix exception with dupe file checking if a local filename starts with ?, due to forgetting to escape them in regex_escape_string. (Carsten Clasohm)
  * Update subterfugue tests to work when subterfugue is using python >=2.2.
  * Document the messageid/mid keywords in the expretrieve expressions section of the manpage.
  * Fix ngetlite reusing a va_list (caused segfault on opteron.)
  * Fix segfault on empty group name.
  * Fix count of plaintext messages on exit.
  * Try harder to decode broken/incomplete files. (Useful for par2 reparing.)

2002-12-24 v0.23:
  * Add --decode arg so -k and -K can be negated.
  * Change -K's long arg from --keep2 to --no-decode to be more descriptive.
  * Make ngetlite check if the tempfile already exists and skip retrieving that article (in case it was already downloaded by nget.)
  * Stop some inconsequential messages from being printed when -qq was specified.