@@ -1,1 +1,1 @@
-Makefile .depend
+Makefile *.d
