@@ -1,3 +1,6 @@
+2003-xx-xx v0.xx:
+  * Use gcc's automatic dependancy generation rather than a seperate depend rule.
+
 2003-09-01 v0.24.1:
   * Fix compile with gcc-3.3.
   * Fix a few testcases leaving tempfiles behind.
